force-app/main/default/objects/Deployment_Item__c/Deployment_Item__c.object-meta.xml
<CustomObject>
    <description>Unique child identifier</description>
    <label>Deployment Item</label>
    <nameField>
        <displayFormat>DI-{00000}</displayFormat>
        <label>Deployment Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>