force-app/main/default/objects/Deployment_Item__c/fields/Component_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_API_Name__c</fullName>
    <description>Metadata API/developer name</description>
    <label>Component API Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>