force-app/main/default/objects/Deployment_Item__c/fields/Release_Request__c.field-meta.xml
<CustomField>
    <fullName>Release_Request__c</fullName>
    <description>Parent release</description>
    <label>Release Request</label>
    <referenceTo>Release_Request__c</referenceTo>
    <relationshipName>Deployment_Item_Number</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>