force-app/main/default/objects/Deployment_Item__c/fields/Requires_Test__c.field-meta.xml
<CustomField>
    <fullName>Requires_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags test-sensitive changes</description>
    <label>Requires Test</label>
    <type>Checkbox</type>
</CustomField>